--- a/pizzamama/requirements.txt
+++ b/pizzamama/requirements.txt
@@ -4,8 +4,8 @@ Django==4.2.5
 django-on-heroku==1.1.2
 gunicorn==21.2.0
 packaging==23.1
-psycopg2-binary==2.9.7
+psycopg==3.1.12
+psycopg2==2.9.8
 sqlparse==0.4.4
-pytz==2023
 typing_extensions==4.8.0
 whitenoise==6.5.0
